<resources>
    <!--<string name="app_name">CoreMVP</string>-->

    <!-- Default -->
    <string name="search">Search</string>
    <string name="log_receive_response" formatted="false">Received response for %s in %.1fms%n%s</string>
    <string name="log_sending_response" formatted="false">Sending request %s on %s%n%s</string>
    <string name="log_encoded_path" formatted="false">Encoded path %s</string>
    <string name="log_data_is_null">Data is null</string>
    <string name="loading">Loading...</string>

    <!-- Main -->
    <string name="beranda">Beranda</string>
    <string name="user">User</string>
    <string name="alamat">Alamat</string>
    <string name="socmed">Social Media</string>
    <string name="list">List</string>

    <string-array name="club_desc">
        <item>Founded in 1899 by a group of Swiss, English and Catalan footballers led by Joan Gamper,
            the club has become a symbol of Catalan culture and Catalanism. Unlike many other football
            clubs, the supporters own and operate Barcelona. It is the third most valuable sports
            team in the world, worth $4.07 billion, and the world's third richest football club in
            terms of revenue, with an annual turnover of €648.3 million.</item>
        <item>Founded on 6 March 1902 as the Madrid Football Club, the club has traditionally worn a
            white home kit since inception. The word real is Spanish for "royal" and was bestowed to
            the club by King Alfonso XIII in 1920 together with the royal crown in the emblem.
            The team has played its home matches in the 81,044-capacity Santiago Bernabéu Stadium in
            downtown Madrid since 1947. Unlike most European sporting entities, Real Madrid's members
            (socios) have owned and operated the club throughout its history. </item>
        <item>FC Bayern was founded in 1900 by 11 football players, led by Franz John. Although
            Bayern won its first national championship in 1932,[6] the club was not selected for the
            Bundesliga at its inception in 1963.[7] The club had its period of greatest success in
            the middle of the 1970s when, under the captaincy of Franz Beckenbauer, it won the European
            Cup three times in a row (1974–1976). </item>
        <item>Manchester City first played in the top-tier of the Football League in 1899 and won
            their first major honour with the FA Cup in 1904. The club's most successful period was
            from 1968 to 1970, when it won the League Championship, FA Cup, League Cup and European
            Cup Winners' Cup, under the management team of Joe Mercer and Malcolm Allison</item>
        <item>United or simply United, is a professional football club based in Old Trafford, Greater
            Manchester, England, that competes in the Premier League, the top flight of English football.
            Nicknamed "the Red Devils", the club was founded as Newton Heath LYR Football Club in 1878,
            changed its name to Manchester United in 1902 and moved to its current stadium, Old
            Trafford,in 1910. </item>
        <item>Chelsea won the First Division title in 1955, followed by various cup competitions
            between 1965 and 1971. The past two decades have seen sustained success, with the club
            winning 23 trophies since 1997.[5] In total, the club has won 28 major trophies; six titles,
            eight FA Cups, five League Cups and four FA Community Shields, one UEFA Champions League,
            two UEFA Cup Winners' Cups, one UEFA Europa League and one UEFA Super Cup.</item>
        <item>A.C. Milan or simply Milan, is a professional football club in Milan, Italy, founded
            in 1899. The club has spent its entire history, with the exception of the 1980–81 and
            1982–83 seasons, in the top flight of Italian football, known as Serie A since 1929–30.</item>
        <item>Arsenal was the first club from the South of England to join The Football League, in
            1893, and they reached the First Division in 1904. Relegated only once, in 1913,
            they continue the longest streak in the top division, and have won the second-most
            top-flight matches in English football history.</item>
    </string-array>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <string name="match_detail">Match Detail</string>
    <string name="prev_match">Prev. Match</string>
    <string name="next_match">Next Match</string>
    <string name="versus">vs</string>
    <string name="goals">Goals</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="favorite">Favorite</string>
    <string name="added_as_fav">Added as favorite</string>
    <string name="deleted_as_favorite">Deleted as favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
