<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_home_badge"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="80dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_home_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="6dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_home_formation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black_effective"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/black_effective"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versus"
                android:textColor="@color/black_effective"
                android:layout_gravity="center_vertical"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/black_effective"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_away_badge"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="80dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_away_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="6dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_away_formation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black_effective"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_home_goals"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goals"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_away_goals"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_home_red"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_cards"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_away_red"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_home_yellow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow_cards"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_away_yellow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lineups"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black_effective"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_home_keeper"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_keeper"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_away_keeper"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_home_defense"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_away_defense"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_home_midfield"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/midfield"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_away_midfield"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_home_forward"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_away_forward"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_home_subtitutes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitutes"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_away_subtitutes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>